# Generated by Django 6.0.1 on 2026-02-03 11:18

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='AnneeAcademique',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('code', models.CharField(help_text='Format: 2023-2024', max_length=9, unique=True)),
                ('date_debut', models.DateField()),
                ('date_fin', models.DateField()),
                ('statut', models.CharField(choices=[('preparation', 'En préparation'), ('cours', 'En cours'), ('terminee', 'Terminée'), ('archivee', 'Archivée')], default='preparation', max_length=12)),
            ],
            options={
                'verbose_name': 'Année Académique',
                'verbose_name_plural': 'Années Académiques',
                'ordering': ['-date_debut'],
            },
        ),
        migrations.CreateModel(
            name='ControleContinu',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('type_evaluation', models.CharField(choices=[('CC', 'Contrôle Continu'), ('SN', 'Session Normale'), ('RA', 'Rattrapage')], max_length=2)),
                ('intitule', models.CharField(max_length=200)),
                ('description', models.TextField(blank=True, null=True)),
                ('date_evaluation', models.DateField()),
                ('heure_debut', models.TimeField()),
                ('duree', models.IntegerField(default=120, help_text='Durée en minutes')),
                ('coefficient', models.FloatField(default=1.0, help_text="Coefficient de l'évaluation")),
                ('salle', models.CharField(blank=True, max_length=50, null=True)),
                ('statut', models.CharField(choices=[('planifiee', 'Planifiée'), ('en_cours', 'En cours'), ('terminee', 'Terminée'), ('annulee', 'Annulée')], default='planifiee', max_length=10)),
                ('nombre_activites', models.IntegerField(default=3, help_text="Nombre d'activités de contrôle continu")),
                ('est_obligatoire', models.BooleanField(default=True)),
                ('type_cc', models.CharField(choices=[('devoir', 'Devoir Surveillé'), ('tp', 'Travail Pratique'), ('projet', 'Projet'), ('oral', 'Interrogation Orale'), ('qcm', 'QCM')], default='devoir', max_length=10)),
            ],
            options={
                'verbose_name': 'Contrôle Continu',
                'verbose_name_plural': 'Contrôles Continus',
            },
        ),
        migrations.CreateModel(
            name='Inscription',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('date_inscription', models.DateField(auto_now_add=True)),
                ('statut', models.CharField(choices=[('active', 'Active'), ('abandon', 'Abandon'), ('validee', 'Validée'), ('refusee', 'Refusée')], default='active', max_length=10)),
                ('note_finale', models.FloatField(blank=True, help_text='Note finale calculée', null=True)),
                ('decision', models.CharField(blank=True, choices=[('ADMIS', 'Admis'), ('RATTRAPAGE', 'Doit passer le rattrapage'), ('REDOUBLE', 'Redouble la matière'), ('VALIDEE', 'Matière validée')], max_length=20, null=True)),
            ],
            options={
                'verbose_name': 'Inscription',
                'verbose_name_plural': 'Inscriptions',
                'ordering': ['etudiant', 'matiere'],
            },
        ),
        migrations.CreateModel(
            name='Matiere',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('code', models.CharField(max_length=10)),
                ('nom', models.CharField(max_length=200)),
                ('description', models.TextField(blank=True, null=True)),
                ('volume_horaire', models.IntegerField(help_text='Volume horaire total en heures')),
                ('credit', models.IntegerField(default=3)),
                ('coefficient', models.IntegerField(default=1)),
                ('type_matiere', models.CharField(choices=[('fond', 'Fondamentale'), ('meth', 'Méthodologique'), ('trans', 'Transversale'), ('opt', 'Optionnelle')], default='fond', max_length=10)),
            ],
            options={
                'verbose_name': 'Matière',
                'verbose_name_plural': 'Matières',
                'ordering': ['unite_enseignement', 'code'],
            },
        ),
        migrations.CreateModel(
            name='Rattrapage',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('type_evaluation', models.CharField(choices=[('CC', 'Contrôle Continu'), ('SN', 'Session Normale'), ('RA', 'Rattrapage')], max_length=2)),
                ('intitule', models.CharField(max_length=200)),
                ('description', models.TextField(blank=True, null=True)),
                ('date_evaluation', models.DateField()),
                ('heure_debut', models.TimeField()),
                ('duree', models.IntegerField(default=120, help_text='Durée en minutes')),
                ('coefficient', models.FloatField(default=1.0, help_text="Coefficient de l'évaluation")),
                ('salle', models.CharField(blank=True, max_length=50, null=True)),
                ('statut', models.CharField(choices=[('planifiee', 'Planifiée'), ('en_cours', 'En cours'), ('terminee', 'Terminée'), ('annulee', 'Annulée')], default='planifiee', max_length=10)),
                ('date_limite_inscription', models.DateField()),
                ('frais_rattrapage', models.DecimalField(decimal_places=2, default=0.0, help_text='Frais de rattrapage en FCFA', max_digits=10)),
                ('type_rattrapage', models.CharField(choices=[('ecrit', 'Rattrapage Écrit'), ('oral', 'Rattrapage Oral'), ('pratique', 'Rattrapage Pratique')], default='ecrit', max_length=10)),
            ],
            options={
                'verbose_name': 'Rattrapage',
                'verbose_name_plural': 'Rattrapages',
            },
        ),
        migrations.CreateModel(
            name='Semestre',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('numero', models.IntegerField(choices=[(1, 'Semestre 1'), (2, 'Semestre 2')])),
                ('date_debut', models.DateField()),
                ('date_fin', models.DateField()),
                ('statut', models.CharField(choices=[('preparation', 'En préparation'), ('cours', 'En cours'), ('evaluation', "Période d'évaluation"), ('termine', 'Terminé')], default='preparation', max_length=12)),
            ],
            options={
                'verbose_name': 'Semestre',
                'verbose_name_plural': 'Semestres',
                'ordering': ['annee_academique', 'numero'],
            },
        ),
        migrations.CreateModel(
            name='SessionNormale',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('type_evaluation', models.CharField(choices=[('CC', 'Contrôle Continu'), ('SN', 'Session Normale'), ('RA', 'Rattrapage')], max_length=2)),
                ('intitule', models.CharField(max_length=200)),
                ('description', models.TextField(blank=True, null=True)),
                ('date_evaluation', models.DateField()),
                ('heure_debut', models.TimeField()),
                ('duree', models.IntegerField(default=120, help_text='Durée en minutes')),
                ('coefficient', models.FloatField(default=1.0, help_text="Coefficient de l'évaluation")),
                ('salle', models.CharField(blank=True, max_length=50, null=True)),
                ('statut', models.CharField(choices=[('planifiee', 'Planifiée'), ('en_cours', 'En cours'), ('terminee', 'Terminée'), ('annulee', 'Annulée')], default='planifiee', max_length=10)),
                ('duree_revision', models.IntegerField(default=7, help_text="Durée de révision en jours avant l'examen")),
                ('type_examen', models.CharField(choices=[('ecrit', 'Examen Écrit'), ('oral', 'Examen Oral'), ('pratique', 'Examen Pratique'), ('combine', 'Examen Combiné')], default='ecrit', max_length=10)),
            ],
            options={
                'verbose_name': 'Session Normale',
                'verbose_name_plural': 'Sessions Normales',
            },
        ),
        migrations.CreateModel(
            name='UniteEnseignement',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('code', models.CharField(max_length=10, unique=True)),
                ('nom', models.CharField(max_length=200)),
                ('description', models.TextField(blank=True, null=True)),
                ('semestre', models.IntegerField(choices=[(1, 'Semestre 1'), (2, 'Semestre 2')])),
                ('niveau', models.IntegerField(choices=[(1, 'Niveau 1'), (2, 'Niveau 2'), (3, 'Niveau 3')])),
                ('credit', models.IntegerField(default=6)),
            ],
            options={
                'verbose_name': "Unité d'Enseignement",
                'verbose_name_plural': "Unités d'Enseignement",
                'ordering': ['niveau', 'semestre', 'code'],
            },
        ),
    ]
