# Generated by Django 6.0.1 on 2026-02-03 11:18

import django.contrib.auth.models
import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='User',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('is_staff', models.BooleanField(default=False, help_text='Designates whether the user can log into this admin site.', verbose_name='staff status')),
                ('date_joined', models.DateTimeField(default=django.utils.timezone.now, verbose_name='date joined')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('user_type', models.CharField(choices=[('student', 'Étudiant'), ('teacher', 'Enseignant'), ('admin_dep', 'Administrateur Département'), ('super_admin', 'Super Administrateur')], default='student', max_length=20)),
                ('email', models.EmailField(max_length=254, unique=True)),
                ('phone', models.CharField(blank=True, max_length=15, null=True)),
                ('is_active', models.BooleanField(default=True)),
                ('last_login_ip', models.GenericIPAddressField(blank=True, null=True)),
                ('username', models.CharField(max_length=150, unique=True)),
                ('first_name', models.CharField(max_length=150)),
                ('last_name', models.CharField(max_length=150)),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'Utilisateur',
                'verbose_name_plural': 'Utilisateurs',
                'ordering': ['-created_at'],
            },
            managers=[
                ('objects', django.contrib.auth.models.UserManager()),
            ],
        ),
        migrations.CreateModel(
            name='Enseignant',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('matricule', models.CharField(help_text="Numéro matricule de l'enseignant", max_length=20, unique=True)),
                ('grade', models.CharField(choices=[('PA', 'Professeur Agrégé'), ('PH', 'Professeur Hors Classe'), ('PC', 'Professeur de Classe'), ('MCF', 'Maître de Conférences'), ('MC', 'Maître Assistant'), ('ASS', 'Assistant'), ('VAC', 'Vacataire')], max_length=50)),
                ('specialite', models.CharField(max_length=200)),
                ('date_embauche', models.DateField()),
                ('bureau', models.CharField(blank=True, max_length=50, null=True)),
                ('telephone_bureau', models.CharField(blank=True, max_length=15, null=True)),
                ('statut', models.CharField(choices=[('actif', 'Actif'), ('conge', 'En congé'), ('retraite', 'Retraité'), ('detache', 'Détaché')], default='actif', max_length=10)),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='enseignant_profile', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Enseignant',
                'verbose_name_plural': 'Enseignants',
                'ordering': ['user__last_name'],
            },
        ),
        migrations.CreateModel(
            name='Etudiant',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('matricule', models.CharField(help_text="Numéro matricule unique de l'étudiant", max_length=20, unique=True)),
                ('date_naissance', models.DateField()),
                ('lieu_naissance', models.CharField(max_length=100)),
                ('nationalite', models.CharField(default='Sénégalaise', max_length=50)),
                ('adresse', models.TextField()),
                ('statut', models.CharField(choices=[('actif', 'Actif'), ('suspendu', 'Suspendu'), ('gradue', 'Gradué'), ('abandon', 'Abandon')], default='actif', max_length=10)),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='etudiant_profile', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Étudiant',
                'verbose_name_plural': 'Étudiants',
                'ordering': ['matricule'],
            },
        ),
    ]
